adding new pages

--- a/index.html
+++ b/index.html
@@ -6,5 +6,9 @@
     </head>
     <body>
         <h1>Odin recipies</h1>
+        <ul>
+            <a href="./recipies/biryani.html"></a>
+
+        </ul>
     </body>
 </html>
