--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Odin recipies hompage</title>
+        <title>Odin recipies homepage</title>
     </head>
     <body>
-        <h1>Odin recipies</h1>
+        <h1>Odin recipes</h1>
         <ul>
-            <a href="./recipies/biryani.html"></a>
+            <a href="./recipies/biryani.html">Biryani</a>
+            <a href="./recipies/Strawberry-salsa.html">Strawberry Salsa</a>
 
         </ul>
     </body>
