--- a/recipies/biryani.html
+++ b/recipies/biryani.html
@@ -7,6 +7,18 @@
     <body>
         <h1>Lamb (Gosht) Biryani</h1>
         <img src="" alt="">
-        <p></p>
+        <p>Biryani is a bit of a project and is time-consuming, but I have never been disappointed with the results. 
+            Since it is such a festive dish, I usually make it for dinner parties. It is a huge hit.</p>
+        <ol>
+            <li>2½ cups basmati rice</li>
+            <li>¼ cup cooking oil</li>
+            <li>8 whole cloves</li>
+            <li>4 black cardamom pods</li> 
+            <li>4 cinnamon sticks</li>
+            <li>4 large onions, sliced thin</li>
+            <li>1 tablespoon garlic paste</li>
+            <li>1 tablespoon ginger paste</li>
+            <li>¼ cup chopped fresh cilantro leaves</li>
+        </ol>
     </body>
 </html>
