README changes and images addition

--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <body>
         <h1>Odin recipes</h1>
         <ul>
+            <a href="./index.html">homepage</a>
             <a href="./recipies/biryani.html">Biryani</a>
             <a href="./recipies/Strawberry-salsa.html">Strawberry Salsa</a>
-
         </ul>
+        <img src="" alt="">
     </body>
 </html>
