--- a/recipies/biryani.html
+++ b/recipies/biryani.html
@@ -5,8 +5,9 @@
         <title>Odin recipies</title>
     </head>
     <body>
+        <a href="../index.html">homepage</a>
         <h1>Lamb (Gosht) Biryani</h1>
-        <img src="" alt="">
+        <img src="../images/biryani.jpeg" alt="Lamb (Gosht) Biryani">
         <p>Biryani is a bit of a project and is time-consuming, but I have never been disappointed with the results. 
             Since it is such a festive dish, I usually make it for dinner parties. It is a huge hit.</p>
         <ol>
@@ -17,8 +18,8 @@
             <li>4 cinnamon sticks</li>
             <li>4 large onions, sliced thin</li>
             <li>1 tablespoon garlic paste</li>
-            <li>1 tablespoon ginger paste</li>
             <li>¼ cup chopped fresh cilantro leaves</li>
+            <li>1 tablespoon ginger paste</li>
         </ol>
     </body>
 </html>
