--- a/recipies/Strawberry-salsa.html
+++ b/recipies/Strawberry-salsa.html
@@ -5,8 +5,16 @@
         <title>Odin recipies</title>
     </head>
     <body>
+        <a href="../index.html">homepage</a>
         <h1>Strawberry Salsa</h1>
-        <img src="" alt="">
-        <p></p>
+        <img src="../images/salsa.jpg" alt="Strawberry Salsa">
+        <p>A sweet salsa that is great with pork and chicken dishes.</p>
+        <ol>
+            <li>4 roma (plum) tomatoes, seeded and chopped</li>
+            <li>1 jalapeno peppers, seeded and minced</li>
+            <li>2 cloves garlic, minced</li>
+            <li>1 lime, juiced</li>
+            <li>1 tablespoon olive oil</li>
+        </ol>
     </body>
 </html>
