--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
         <title>Odin recipies homepage</title>
     </head>
     <body>
-        <h1>Odin recipes</h1>
+        <h1>Odin Recipes</h1>
+        <img src="./images/recioes.jpg" alt="">
         <ul>
-            <a href="./index.html">homepage</a>
-            <a href="./recipies/biryani.html">Biryani</a>
-            <a href="./recipies/Strawberry-salsa.html">Strawberry Salsa</a>
+            <li><a href="./recipies/biryani.html">Biryani</a></li> 
+            <li><a href="./recipies/Strawberry-salsa.html">Strawberry Salsa</a></li> 
         </ul>
-        <img src="" alt="">
     </body>
 </html>
