removed extra li tag

--- a/recipies/biryani.html
+++ b/recipies/biryani.html
@@ -41,9 +41,9 @@
             <li> 1 onion, sliced</li>
             <li> ½ teaspoon saffron</li>
             <li> 2 tablespoons warm milk</li>
-        </ol></li>
-
-</li>        <h2>Directions</h2>
+        </ol>
+             <h2>Directions</h2>
+             
         <ul>
             <li>Place the basmati rice in a large container and cover with several inches of cool water; let stand 30 minutes. Drain.</li>
             <li>Heat 1/4 cup oil in a large skillet over medium heat; fry the cloves, cardamom pods, and cinnamon sticks in the hot oil until fragrant, about 1 minute. Add the onions; cook and stir until the onions are lightly browned, about 5 minutes. Stir the garlic paste and ginger paste into the onion mixture; cook until the garlic and ginger is fragrant, about 1 minute more. Sprinkle the cilantro and mint over the mixture and cook 1 minute more.</li>
