changes in salsa html,

--- a/recipies/Strawberry-salsa.html
+++ b/recipies/Strawberry-salsa.html
@@ -5,10 +5,14 @@
         <title>Odin recipies</title>
     </head>
     <body>
-        <a href="../index.html">homepage</a>
         <h1>Strawberry Salsa</h1>
         <img src="../images/salsa.jpg" alt="Strawberry Salsa">
+        <h2>Description</h2>
+
         <p>A sweet salsa that is great with pork and chicken dishes.</p>
+        
+        <h2>Ingredients</h2>
+
         <ol>
             <li>4 roma (plum) tomatoes, seeded and chopped</li>
             <li>1 jalapeno peppers, seeded and minced</li>
@@ -16,5 +20,11 @@
             <li>1 lime, juiced</li>
             <li>1 tablespoon olive oil</li>
         </ol>
+        <h2>Directions</h2>
+        <ul>
+            <li>In a large bowl, combine strawberries, tomatoes, chile peppers, garlic, lime juice and oil. Toss all together to mix and coat. Cover dish and refrigerate for 2 hours to chill. Ready to serve!</li>
+        </ul>
+        <a href="../index.html">go to homepage</a>
+
     </body>
 </html>
