--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
         <img src="./images/recioes.jpg" alt="">
         <ul>
             <li><a href="./recipies/biryani.html">Biryani</a></li> 
-            <li><a href="./recipies/Strawberry-salsa.html">Strawberry Salsa</a></li> 
+            <li><a href="./recipies/Strawberry-salsa.html">Strawberry Salsa</a></li>
+            <li><a href="./recipies/poached-eggs.html"> Eggs over easy for the weekend.</a></li> 
+            <li><a href="./recipies/mojito.html"></a>The Real Mojito</li>
         </ul>
     </body>
 </html>
