mojito link added

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <li><a href="./recipies/biryani.html">Biryani</a></li> 
             <li><a href="./recipies/Strawberry-salsa.html">Strawberry Salsa</a></li>
             <li><a href="./recipies/poached-eggs.html"> Eggs over easy for the weekend.</a></li> 
-            <li><a href="./recipies/mojito.html"></a>The Real Mojito</li>
+            <li><a href="./recipies/mojito.html">The Real Mojito</a></li>
         </ul>
     </body>
 </html>
