addded mojito image

--- a/recipies/mojito.html
+++ b/recipies/mojito.html
@@ -8,7 +8,7 @@
         
         <h1>The Real Mojito</h1>
 
-        <img src="../images/mojito.jpeg" alt="The Real Mojito">
+        <img src="../images/mojito.jpg" alt="The Real Mojito">
 
         <h2>Description</h2>
 
