--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
     <head>
         <meta charset="utf-8">
         <title>Odin recipies homepage</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1>Odin Recipes</h1>
         <img src="./images/recioes.jpg" alt="">
-        <ul>
+        <ul class="navbar">
             <li><a href="./recipies/biryani.html">Biryani</a></li> 
             <li><a href="./recipies/Strawberry-salsa.html">Strawberry Salsa</a></li>
             <li><a href="./recipies/poached-eggs.html"> Eggs over easy for the weekend.</a></li> 
