--- a/recipies/Strawberry-salsa.html
+++ b/recipies/Strawberry-salsa.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Odin recipies</title>
+        <link rel="stylesheet" href="recipes.css">
     </head>
     <body>
         <h1>Strawberry Salsa</h1>
