modified and added html and css files.

--- a/recipies/poached-eggs.html
+++ b/recipies/poached-eggs.html
@@ -6,6 +6,32 @@
         <link rel="stylesheet" href="recipes.css">
     </head>
     <body>
+        <div class="flex-container">
+            <h1>Odin Recipes</h1>
+            <ul>
+                <li><a href="./biryani.html">Biryani</a></li> 
+                <li><a href="./Strawberry-salsa.html">Strawberry Salsa</a></li>
+                <li><a href="./poached-eggs.html"> Eggs over easy for the weekend.</a></li> 
+                <li><a href="./mojito.html">The Real Mojito</a></li>
+            </ul>
+        </div>
+
+        <div class="container">
+            <div class="head">
+
+            </div>
+            <div class="description">
+
+            </div>
+
+            <div class="ingredients">
+
+            </div>
+
+            <div class="directions">
+                
+            </div>
+        </div>
         
         <h1>Eggs Over Easy with Potato Hash</h1>
 
