--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Odin Recipes</h1>
-        <img src="./images/recioes.jpg" alt="">
-        <ul class="navbar">
-            <li><a href="./recipies/biryani.html">Biryani</a></li> 
-            <li><a href="./recipies/Strawberry-salsa.html">Strawberry Salsa</a></li>
-            <li><a href="./recipies/poached-eggs.html"> Eggs over easy for the weekend.</a></li> 
-            <li><a href="./recipies/mojito.html">The Real Mojito</a></li>
-        </ul>
+        <div class="flex-container">
+            <h1>Odin Recipes</h1>
+            <ul class="container">
+                <li><a href="./recipies/biryani.html">Biryani</a></li> 
+                <li><a href="./recipies/Strawberry-salsa.html">Strawberry Salsa</a></li>
+                <li><a href="./recipies/poached-eggs.html"> Eggs over easy for the weekend.</a></li> 
+                <li><a href="./recipies/mojito.html">The Real Mojito</a></li>
+            </ul>
+        </div> 
+        <div class="tenor-gif-embed" data-postid="19232788" data-share-method="host" data-aspect-ratio="1.77778" data-width="100%"><a href="https://tenor.com/view/thanksgiving-hollerstudios-feast-dinner-friendsgiving-gif-19232788">Thanksgiving Hollerstudios GIF</a>from <a href="https://tenor.com/search/thanksgiving-gifs">Thanksgiving GIFs</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
     </body>
 </html>
